Fixed some text clipping from About Us section in Mobile view due to some new styling applied in previous push

--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -682,7 +682,7 @@ h1 {
 
   .about-us {
     padding-top: 9vh;
-    height: 240vh;
+    height: 250vh;
 
     h1 {
       padding-bottom: 5rem;
